# Leptospira-CLI

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
lepmodel/: __init__.py  blast_runner.py  cli.py  feature_extraction.py  ml_predictor.py  utils.py
